# brass

./: Cargo.toml  README.md
.github/: dependabot.yml
src/: cryption.rs  data.rs  main.rs  server.rs  session.rs  table.rs  utils.rs
src/routes/: mod.rs
src/utils/: mod.rs
www/: astro.config.mjs  npm_watch.nu  package-lock.json  package.json  tailwind.config.js
www/src/components/: Auth.svelte  Chat.svelte  Message.svelte  Profile.svelte  Sidebar.svelte  Signup.svelte  Topbar.svelte
www/src/layouts/: Layout.astro
www/src/pages/: auth.astro  home.astro
