[package]
name = "brass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
actix-cors = "0.6.4"
actix-session = { version = "0.7.2", features= ["cookie-session"] }
mongodb = "2.5.0"
serde_json = "1.0.96"
serde = { version = "*" , features = ["derive"]}
anyhow = "1.0.70"
futures-util = "0.3.28"
bson = "2.6.1"
pbkdf2 = "0.10"
rand = "0.8.5"
actix-files = "0.6.2"
env_logger = "0.10.0"
uuid = { version = "1.4.1" , features = ["v4", "fast-rng", "macro-diagnostics", ]}
surrealdb = "1.0.0-beta.9"
chrono = "0.4.26"
